# Gomoku

./: .clang-format  .gitignore  AGENTS.md  BoardWidget.cpp  BoardWidget.h  CMakeLists.txt  DEPLOYMENT.md  MainWindow.cpp  MainWindow.h  Makefile  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  release.yml
Models/: BoardManager.cpp  BoardManager.h  Constants.h  GameManager.cpp  GameManager.h  GomokuAI.cpp  GomokuAI.h
Report/: generate-pdf.sh  gomoku-report.md  header.tex
Tests/: GomokuAIOverHeadTests.cpp  GomokuAIParallelizationTests.cpp
UI/: BoardWidget.cpp  BoardWidget.h  ColorChooserWidget.cpp  ColorChooserWidget.h  GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h
docs/: Concurrency_Roadmap.md  PARALLELIZATION_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  QT_EVENT_LOOP.md  STRUCTURE.md
